force-app/main/default/objects/Account/fields/Account_data_matches_with_Old_NAV_data__c.field-meta.xml
<CustomField>
    <fullName>Account_data_matches_with_Old_NAV_data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account data matches with Old NAV data</label>
    <type>Checkbox</type>
</CustomField>