force-app/main/default/objects/Account/fields/Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Level__c</fullName>
    <inlineHelpText>If Agency is owned by a Holding Group, enter the name of the governing Account in the Parent Account field below.</inlineHelpText>
    <label>Account Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Relationship_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Holding Company Group</fullName>
            </value>
            <value>
                <fullName>Holding Company Division</fullName>
            </value>
            <value>
                <fullName>Holding Company Agency</fullName>
            </value>
            <value>
                <fullName>Independent Agency</fullName>
            </value>
            <value>
                <fullName>Independent Publisher</fullName>
            </value>
            <value>
                <fullName>Ad Network</fullName>
            </value>
            <value>
                <fullName>Ad Tech</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Niche</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>Approached</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>