force-app/main/default/objects/Account/fields/Account_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Risk_Level__c</fullName>
    <label>Atradius Risk Level</label>
    <type>TextArea</type>
</CustomField>