force-app/main/default/objects/Account/fields/Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server__c</fullName>
    <label>Ad Server</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DFP</fullName>
            </value>
            <value>
                <fullName>Adtech</fullName>
            </value>
            <value>
                <fullName>Emediate</fullName>
            </value>
            <value>
                <fullName>PPAS</fullName>
            </value>
            <value>
                <fullName>MADS</fullName>
            </value>
            <value>
                <fullName>FM Adserving</fullName>
            </value>
            <value>
                <fullName>SMART</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>