force-app/main/default/objects/Account/fields/Ad_Server_Other__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_Other__c</fullName>
    <label>Ad Server Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>