force-app/main/default/objects/Account/fields/Adform_Legal_Entities__c.field-meta.xml
<CustomField>
    <fullName>Adform_Legal_Entities__c</fullName>
    <label>Adform Legal Entities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adform A/S</fullName>
            </value>
            <value>
                <fullName>Adform Inc.</fullName>
            </value>
            <value>
                <fullName>Adform Software Spain S.L.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>