force-app/main/default/objects/Account/fields/Adserving_Tracking_System__c.field-meta.xml
<CustomField>
    <fullName>Adserving_Tracking_System__c</fullName>
    <label>Adserving/Tracking System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>