force-app/main/default/objects/Account/fields/Agency_for_advertiser__c.field-meta.xml
<CustomField>
    <fullName>Agency_for_advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used only for advertisers to add related agency</description>
    <inlineHelpText>This field is used only for advertisers to add related agency</inlineHelpText>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Agency)</relationshipLabel>
    <relationshipName>Agency_for_advertiser1</relationshipName>
    <type>Lookup</type>
</CustomField>