force-app/main/default/objects/Account/fields/Agency_Group_No__c.field-meta.xml
<CustomField>
    <fullName>Agency_Group_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Group No.</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Agency Group No.)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>