force-app/main/default/objects/Account/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <inlineHelpText>Contract signed with client</inlineHelpText>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contract_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>TPSA</fullName>
            </value>
            <value>
                <fullName>PMSA</fullName>
            </value>
            <value>
                <fullName>PPRM</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>