force-app/main/default/objects/Account/fields/Annual_Net_Rev_EUR_2017__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Rev_EUR_2017__c</fullName>
    <label>2017 Annual Net Rev. (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>