force-app/main/default/objects/Account/fields/Annual_Projected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Projected_Revenue__c</fullName>
    <label>Projected Net Rev. YOY (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>