force-app/main/default/objects/Account/fields/Assigned_PSX__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PSX__c</fullName>
    <label>Assigned PSX</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Regional_PSX__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Marik Luidens</fullName>
            </value>
            <value>
                <fullName>Adam Nykles</fullName>
            </value>
            <value>
                <fullName>Ondrej Syncak</fullName>
            </value>
            <value>
                <fullName>Kristoffer Køster</fullName>
            </value>
            <value>
                <fullName>Martin Talarek</fullName>
            </value>
            <value>
                <fullName>Mikas Stankevičius</fullName>
            </value>
            <value>
                <fullName>Jyrki Lauronen</fullName>
            </value>
            <value>
                <fullName>Helen Jara Ureta</fullName>
            </value>
            <value>
                <fullName>Jani Lahtinen</fullName>
            </value>
            <value>
                <fullName>Sari Alakurtti</fullName>
            </value>
            <value>
                <fullName>Liselotte Le Helloco</fullName>
            </value>
            <value>
                <fullName>Nicolas Vittet</fullName>
            </value>
            <value>
                <fullName>Claus Reuther</fullName>
            </value>
            <value>
                <fullName>Anja Eckstein</fullName>
            </value>
            <value>
                <fullName>Giedrius Bielinis</fullName>
            </value>
            <value>
                <fullName>Kirsten Steiner</fullName>
            </value>
            <value>
                <fullName>Sebastian Schmidt</fullName>
            </value>
            <value>
                <fullName>Andreas Kemper</fullName>
            </value>
            <value>
                <fullName>Florian Rolke</fullName>
            </value>
            <value>
                <fullName>Marcel Ehrlitzer</fullName>
            </value>
            <value>
                <fullName>Tarek Muhyeddin</fullName>
            </value>
            <value>
                <fullName>Thorsten Feldhege</fullName>
            </value>
            <value>
                <fullName>Daniela Forzinetti</fullName>
            </value>
            <value>
                <fullName>Valentina Mensi</fullName>
            </value>
            <value>
                <fullName>Enrico Trevisani</fullName>
            </value>
            <value>
                <fullName>Tiziano Rescali</fullName>
            </value>
            <value>
                <fullName>Tommaso Grimoldi</fullName>
            </value>
            <value>
                <fullName>Vjedka Poldervaart</fullName>
            </value>
            <value>
                <fullName>Fiona Fleur</fullName>
            </value>
            <value>
                <fullName>Teun Steverink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>