force-app/main/default/objects/Account/fields/Atradius_ID__c.field-meta.xml
<CustomField>
    <fullName>Atradius_ID__c</fullName>
    <label>Atradius ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>