force-app/main/default/objects/Account/fields/Automated_Billing__c.field-meta.xml
<CustomField>
    <fullName>Automated_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automated Billing (at least 1 service)</label>
    <type>Checkbox</type>
</CustomField>