force-app/main/default/objects/Account/fields/Average_Monthly_Net_Rev_EUR_2017__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Net_Rev_EUR_2017__c</fullName>
    <label>2017 Average Monthly Net Rev. (EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>