force-app/main/default/objects/Account/fields/Average_Monthly_Revenue_EUR_2016__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Revenue_EUR_2016__c</fullName>
    <label>Average Monthly Net Rev. (EUR) 2016</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>