force-app/main/default/objects/Account/fields/Backup_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Backup_Account_Manager__c</fullName>
    <label>Backup Account Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>