force-app/main/default/objects/Account/fields/Billing_Company_name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company_name__c</fullName>
    <description>Same as Pricing Excel</description>
    <inlineHelpText>Same as Pricing Excel</inlineHelpText>
    <label>Billing Company name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>