force-app/main/default/objects/Account/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <inlineHelpText>When Account Type is Brand/Advertiser, populate this field with the Brand Name.</inlineHelpText>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>