force-app/main/default/objects/Account/fields/Brand_Solution_user__c.field-meta.xml
<CustomField>
    <fullName>Brand_Solution_user__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Solution user</label>
    <type>Checkbox</type>
</CustomField>