force-app/main/default/objects/Account/fields/Business_Development_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner__c</fullName>
    <label>Business Development Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ali Reza Amirmostofian</fullName>
            </value>
            <value>
                <fullName>Alisa Gilbert</fullName>
                <isActive>false</isActive>
                <label>Alisa Gilbert</label>
            </value>
            <value>
                <fullName>Kamile Pakalnyte</fullName>
            </value>
            <value>
                <fullName>Megd Abo Amsha</fullName>
            </value>
            <value>
                <fullName>Oliver Weiss</fullName>
                <isActive>false</isActive>
                <label>Oliver Weiss</label>
            </value>
            <value>
                <fullName>Simonas Savičius</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>