force-app/main/default/objects/Account/fields/Central_PSX__c.field-meta.xml
<CustomField>
    <fullName>Central_PSX__c</fullName>
    <label>Central PSX</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Operational_Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adele Vainoraite</fullName>
            </value>
            <value>
                <fullName>Agne Matuzeviciute</fullName>
            </value>
            <value>
                <fullName>Agnis Vaiciunas</fullName>
            </value>
            <value>
                <fullName>Aivaras Maceina</fullName>
            </value>
            <value>
                <fullName>Aivaras Šiurkus</fullName>
            </value>
            <value>
                <fullName>Aleksandras Jakuchinas</fullName>
            </value>
            <value>
                <fullName>Aurimas Kraujalis</fullName>
            </value>
            <value>
                <fullName>Egle Norkute</fullName>
            </value>
            <value>
                <fullName>Elzbieta Kasinskaja</fullName>
            </value>
            <value>
                <fullName>Evelina Simaskaite</fullName>
            </value>
            <value>
                <fullName>Gabriele Kasauskaite</fullName>
            </value>
            <value>
                <fullName>Ieva Juonytė</fullName>
            </value>
            <value>
                <fullName>Karolis Lamsargis</fullName>
            </value>
            <value>
                <fullName>Kristijonas Pranskus</fullName>
            </value>
            <value>
                <fullName>Lina Jancyte</fullName>
            </value>
            <value>
                <fullName>Michal Marek</fullName>
            </value>
            <value>
                <fullName>Milda Gudonavičienė</fullName>
            </value>
            <value>
                <fullName>Paulius Sparnaitis</fullName>
            </value>
            <value>
                <fullName>Ramona Rudgalvyte</fullName>
            </value>
            <value>
                <fullName>Ramune Velvyte</fullName>
            </value>
            <value>
                <fullName>Rokas Armalis</fullName>
            </value>
            <value>
                <fullName>Rokas Gedvilas</fullName>
            </value>
            <value>
                <fullName>Rūta Voveraitienė</fullName>
            </value>
            <value>
                <fullName>Simona Žilėnaitė</fullName>
            </value>
            <value>
                <fullName>Tautvydas Gelumbickas</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>