force-app/main/default/objects/Account/fields/Client_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Client_Status_Reason__c</fullName>
    <label>Client Status Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Different Currencies</fullName>
            </value>
            <value>
                <fullName>Entity Changed</fullName>
            </value>
            <value>
                <fullName>Passed to Collection Agency</fullName>
            </value>
            <value>
                <fullName>Passed to Collection Agency/Recovered</fullName>
            </value>
            <value>
                <fullName>Passed to Collection Agency/Written off</fullName>
            </value>
            <value>
                <fullName>Spreading Malware</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>TPSA Expired</fullName>
            </value>
            <value>
                <fullName>Working Again</fullName>
            </value>
            <value>
                <fullName>Written off</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>