force-app/main/default/objects/Account/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment on the Invoice</label>
    <type>TextArea</type>
</CustomField>