force-app/main/default/objects/Account/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <description>5/14/15 JAlbino: Added as part of Phase 2 project w/ SBukhari. To link Accounts with finance systems.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Adform platform/Navision unique ID for this customer.</inlineHelpText>
    <label>Company ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>