force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <inlineHelpText>Large Enterprise (&gt;100 employees)
Medium Enterprise (50-100 employees)
Small Enterprise (10-50 employees)
Startup (1-10 employees)</inlineHelpText>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large Enterprise</fullName>
            </value>
            <value>
                <fullName>Medium Enterprise</fullName>
            </value>
            <value>
                <fullName>Small Enterprise</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>