force-app/main/default/objects/Account/fields/Competitor_Information__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Information__c</fullName>
    <inlineHelpText>Describe place in competitive landscape</inlineHelpText>
    <label>Competitor Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>