force-app/main/default/objects/Account/fields/Contract_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Company_Name__c</fullName>
    <formula>IF(Legal_Company_Name__c != &#39;&#39;, Legal_Company_Name__c,Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Company Name</label>
    <type>Text</type>
</CustomField>