force-app/main/default/objects/Account/fields/Contract_end_date_BD__c.field-meta.xml
<CustomField>
    <fullName>Contract_end_date_BD__c</fullName>
    <label>Contract end date BD</label>
    <type>Date</type>
</CustomField>