force-app/main/default/objects/Account/fields/Contract_start_date_BD__c.field-meta.xml
<CustomField>
    <fullName>Contract_start_date_BD__c</fullName>
    <label>Contract start date BD</label>
    <type>Date</type>
</CustomField>