force-app/main/default/objects/Account/fields/Credit_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Status__c</fullName>
    <label>Credit Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved for Sell-side</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>