force-app/main/default/objects/Account/fields/CS_Support_Reason__c.field-meta.xml
<CustomField>
    <fullName>CS_Support_Reason__c</fullName>
    <label>CS Support Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>