force-app/main/default/objects/Account/fields/Customer_importance__c.field-meta.xml
<CustomField>
    <fullName>Customer_importance__c</fullName>
    <description>Helps identify the most important customer</description>
    <label>Customer Importance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>