force-app/main/default/objects/Account/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <formula>IF(ISPICKVAL(CS_Support_Effort__c, &quot;High&quot;), IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;),
IF(ISPICKVAL(CS_Support_Effort__c, &quot;Medium&quot;), IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)
 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effort</label>
    <type>Text</type>
</CustomField>