force-app/main/default/objects/Account/fields/GHG__c.field-meta.xml
<CustomField>
    <fullName>GHG__c</fullName>
    <inlineHelpText>Select YES if it is GHG</inlineHelpText>
    <label>GHG Depreciated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>