force-app/main/default/objects/Account/fields/GHG_Franchise__c.field-meta.xml
<CustomField>
    <fullName>GHG_Franchise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operates under local contract</label>
    <type>Checkbox</type>
</CustomField>