force-app/main/default/objects/Account/fields/Global_Assigned_PSX__c.field-meta.xml
<CustomField>
    <fullName>Global_Assigned_PSX__c</fullName>
    <label>Global Assigned PSX</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Operational_Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>David Hillier</fullName>
            </value>
            <value>
                <fullName>Gregory Cristal</fullName>
            </value>
            <value>
                <fullName>Jesper Schwartz</fullName>
            </value>
            <value>
                <fullName>Jody Shillday</fullName>
            </value>
            <value>
                <fullName>Marc-Oliver Michel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>