force-app/main/default/objects/Account/fields/Hide_sales_tax__c.field-meta.xml
<CustomField>
    <fullName>Hide_sales_tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked Sales tax information will not appear on the invoice PDF</description>
    <inlineHelpText>If checked Sales tax information will not appear on the invoice PDF</inlineHelpText>
    <label>Hide sales tax</label>
    <type>Checkbox</type>
</CustomField>