force-app/main/default/objects/Account/fields/Insurance_amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_amount__c</fullName>
    <label>Insurance amount (EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>