force-app/main/default/objects/Account/fields/Insurance_reason__c.field-meta.xml
<CustomField>
    <fullName>Insurance_reason__c</fullName>
    <label>Insurance decision reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>